# gym-eldorado

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  README.md  compile_commands.json  index.json  info.json  pyproject.toml  pyvenv.cfg  regressions.xml  requirements.txt  setup.py  sync_version.py  tests.py
.github/workflows/: build_wheels.yml
Scripts/: activate  activate.bat  activate.fish  activate.nu
benchmarks/: benchmarks.py
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs/source/_autosummary/: city_of_gold.vec.env.rst  city_of_gold.vec.rst  city_of_gold.vec.runner.rst  city_of_gold.vec.sampler.rst
eldorado_environment/: __init__.py  eldorado_environment_v0.py
eldorado_environment/env/: __init__.py  cards.py  environment.py  game.py  map.py  player.py
graphs/arch-x86_64/branch-cppenv/cpu-AMD Ryzen 5 4500U with Radeon Graphics/machine-IdeaPad/num_cpu-6/numpy-2.2/os-Linux 6.13.3-arch1-1/python-3.13/ram-7482024/: benchmarks.TimeEnvs.peakmem_runner.json  benchmarks.TimeEnvs.time_reset.json  benchmarks.TimeEnvs.time_run.json  benchmarks.TimeEnvs.time_sample.json  summary.json
graphs/summary/: benchmarks.TimeEnvs.peakmem_runner.json  benchmarks.TimeEnvs.time_reset.json  benchmarks.TimeEnvs.time_run.json  benchmarks.TimeEnvs.time_sample.json
gym-eldorado/: __init__.py  cards.py  env.py  game.py  map.py  player.py
include/: api.h  environment.h  geometry.h  map.h  player.h  runner.h  sampler.h  vec_environment.h  vec_sampler.h
include/pybind/: common.h  vectorized.h
pytest/: test_vec_env.py
src/: cards.h  environment.cpp  environment.h  geometry.cpp  map.cpp  map.h  player.h
src/pybind/: common.cpp  single_env.cpp  vectorized.cpp
src/tests/: profile.cpp  test_environment.cpp
