[build-system]
requires = ["scikit-build-core", "pybind11", "toml"]
build-backend = "scikit_build_core.build"

[project]
name = "city_of_gold"
version = "0.0.1"
authors = [
    {name = "Aapo Kössi", email = "aapo.ilmari.kossi@cern.ch"},
]
description = "A board game reinforcement learning enviroment in C++"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
license-files = ["LICENSE"]

dependencies = ["numpy"]

[project.urls]
homepage = "https://github.com/aapo-kossi/city-of-gold"
issues = "https://github.com/aapo-kossi/city-of-gold/issues"

[tool.cibuildwheel]

manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-armv7l-image = "manylinux_2_31"
manylinux-ppc64le-image = "manylinux_2_28"
manylinux-s390x-image = "manylinux_2_28"
manylinux-pypy_x86_64-image = "manylinux_2_28"
manylinux-pypy_aarch64-image = "manylinux_2_28"
skip = ["*-manylinux_i686"]

[tool.cibuildwheel.macos]
environment = { "MACOSX_DEPLOYMENT_TARGET" = "10.13" }
